[gd_scene load_steps=5 format=3 uid="uid://cdaudi416meeb"]

[ext_resource type="Script" path="res://player/player.gd" id="1_1cjjo"]
[ext_resource type="Texture2D" uid="uid://38bbgfs645hi" path="res://icon.svg" id="2_fdlkt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h6bod"]
radius = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0eumx"]
size = Vector2(128, 2)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_1cjjo")
jump_height = -280.0
peak_time_sec = 0.3
fall_time_sec = 0.25
terminal_velocity = 3600.0
speed = 960.0
accel_time_sec = 0.15
decel_time_sec = 0.1

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_fdlkt")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h6bod")

[node name="CollisionBoxFeet" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 63)
shape = SubResource("RectangleShape2D_0eumx")

[node name="Timers" type="Node2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="BufferTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timers/CoyoteTimer" to="." method="_on_coyote_timeout"]
